# python-lix

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/lix/: __init__.py  core.py  geo.py  tokenizer.py  types.py
tests/: conftest.py  lix_demo.ipynb  test_core.py  test_geo.py  test_tokenizer.py
